auto admin generated done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,10 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 spring.h2.console.enabled=true
+
+
+#Admin User
+admin.square=tonmoysahaopi@gmail.com
+admin.password.square=112233
