--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.h2.console.enabled=true
 #Admin User
 admin.square=tonmoysahaopi@gmail.com
 admin.password.square=112233
+
+#JWT
+jwt.signing.key.secret=mySecret
+jwt.http.request.header=Authorization
+jwt.token.expiration.in.seconds=604800
