--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,12 @@
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-
-spring.datasource.url=jdbc:mysql://localhost:3306/square?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto= create
-#spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= create
+spring.h2.console.enabled=true
 
 
 #Admin User
